# NEWS-G-SNOLAB

./: CMakeLists.txt  LICENSE  README.md  README.txt
data/: background_neutron_spectrum.root
include/: accumulable_list.h  action_initialization.h  decay.h  detector_construction.h  event_action.h  particle_score.h  primary_generator_action.h  run_action.h  run_type.h  spectrum.h  stepping_action.h
root_macros/: HistogramComparisons.cc  NeutronSimulationMacro.cc  ambe_spectrum.cc  data_consolidator.cc  gamma_graphs.cc  raw_process.cc
src/: action_initialization.cpp  detector_construction.cpp  event_action.cpp  main.cpp  primary_generator_action.cpp  run_action.cpp  run_type.cpp  spectrum.cpp  stepping_action.cpp  vis_commands.mac
